crates/ssa-workflow-derive/tests/ui/union.stderr
error: CanonicalEncode can only be derived for structs
 --> tests/ui/union.rs:4:1
  |
4 | union BadUnion {
  | ^^^^^
